--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "three": "^0.142.0"
+    "react-tsparticles": "^2.1.3",
+    "three": "^0.142.0",
+    "tsparticles": "^2.1.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.2.2",
